--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
     </nav>
 
     <!-- Home Section with Parallax Effect -->
-    <section id="home" class="parallax-section">
+   <section id="home" class="parallax-section">
         <div>
         <div class="container text-left " id="fg">
-            <h1 data-aos="fade-left">Hellow <br>I'm <ins id="le">LEUL GETACHEW</ins> </h1 >
-            <h1 data-aos="fade-right">Full Stack Web Developer</h1>
+            <h1 id="cssa" data-aos="fade-left">Hellow <br>I'm <ins id="le">LEUL GETACHEW</ins> </h1 >
+            <h1 id="cssa" data-aos="fade-right">Full Stack Web Developer</h1>
         </div>
         
-        <span class="svg-wave"> <img  class="svg-hero" src="img/applight-wave.svg" width="1820px"> </span>
+        <span class="svg-wave"> <img  class="svg-hero" src="img/applight-wave.svg" width=""> </span>
         
     </section>
     <div>
