--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h1 id="cssa" data-aos="fade-right">Full Stack Web Developer</h1>
         </div>
         
-        <span class="svg-wave"> <img  class="svg-hero" src="img/applight-wave.svg" width=""> </span>
+       <span id="svg-wave" class="svg-wave"> <img id="svg-hero" class="svg-hero" src="img/applight-wave.svg" width=""> </span>
         
     </section>
     <div>
